Fix WebKitGTK build on MacOS https://bugs.webkit.org/show_bug.cgi?id=225850

Patch by Dmitry Kalinkin <dmitry.kalinkin+webkit@gmail.com> on 2021-09-06
Reviewed by Michael Catanzaro.

Define HAVE_AUDIT_TOKEN only for Cocoa backend.
Source/WebKit:

Streamline other conditionals for consistency between headers and implementations.

* NetworkProcess/ServiceWorker/WebSWOriginStore.cpp:
(WebKit::WebSWOriginStore::sendStoreHandle):
* Platform/IPC/unix/ConnectionUnix.cpp:
* Platform/IPC/IPCSemaphore.h:
* Platform/SharedMemory.h:
* UIProcess/VisitedLinkStore.cpp:
(WebKit::VisitedLinkStore::sendStoreHandleToProcess):

Source/WTF:

* wtf/PlatformHave.h:

Canonical link: https://commits.webkit.org/241361@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@282061 268f45cc-cd09-0410-ab3c-d52691b4dbfc